@@ -11,6 +11,7 @@ CHANGES IN FLTK 1.1.10
 	  resizing their children (STR #2032)
 	- Fixed adding an idle handler during
 	  a draw() call (STR #1950)
+	- Improved stability of fl_read_image (STR #2021)
 
 CHANGES IN FLTK 1.1.9
 
